# CAFC-Revisions

./: .replit  API_DOCUMENTATION.md  DEBUGGING.md  ENGINEERING_AUDIT_REPORT.md  cases_export.csv  duplicate_cases.csv  failed_cases_404.csv  golden_baseline.json  golden_verify_output.txt  manifest_full_export.csv  missing_pdfs.csv  package-lock.json  package.json  pyproject.toml  replit.md  searchable_cases.csv  start.sh  test-extract.mjs  tsconfig.json  verify_fixes.py
attached_assets/: Pasted--7-Lower-Temperature-Longer-Timeouts-Priority-1-Trivial_1769793534640.txt  Pasted--Role-Senior-Full-Stack-Engineer-Project-Specialized-Le_1769454856935.txt  Pasted-An-ultimate-prompt-for-Replit-s-agent-should-do-two-thi_1769295183277.txt  Pasted-Based-on-my-search-of-the-CAFC-database-here-s-what-the_1769534843244.txt  Pasted-Below-is-a-Replit-safe-full-replacement-system-prompt-u_1769205405544.txt  Pasted-Below-is-a-ready-to-paste-starting-prompt-for-Replit-Ag_1769137907700.txt  Pasted-Below-is-a-single-Replit-input-prompt-you-can-paste-int_1769284065494.txt  Pasted-Context-Ranking-is-implemented-but-artifacts-show-criti_1769610511989.txt  Pasted-Finish-validation-harden-UX-rollout-controls-Deliverabl_1769622619643.txt  Pasted-Goal-Fix-backend-smart-eval-phase1-py-summary-aggregati_1769963789590.txt  Pasted-Good-that-s-exactly-the-right-direction-for-operational_1769624532501.txt  Pasted-Great-thanks-for-fixing-the-P0-P1-issues-Before-we-proc_1769611992690.txt  Pasted-HARDEN-GROUNDED-ANSWERS-FIX-CITATIONS-Current-UI-shows-_1769146108807.txt  (+46 more)
backend/: DATABASE_HEALTH_BASELINE.md  (+28 more)
(+151 files in other folders)
