[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
]
